--- a/package.json
+++ b/package.json
@@ -76,6 +76,11 @@
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "gitbook-cli": "^2.3.2",
+    "gitbook-plugin-algolia": "^1.0.7",
+    "gitbook-plugin-anchorjs": "^1.1.1",
+    "gitbook-plugin-edit-link": "^2.0.2",
+    "gitbook-plugin-github": "^2.0.0",
+    "gitbook-plugin-prism": "^2.3.0",
     "glob": "^7.1.1",
     "jest": "^21.2.1",
     "lodash.get": "^4.4.2",
