--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,7 @@
 {
+  "arrowParens": "always",
+  "printWidth": 80,
   "semi": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
